plugins/JavaFX/testData/highlighting/Attribute.fx
class A {
  public-init <error descr="The 'attribute' keyword is no longer supported. Please use 'def' or 'var' to declare class variables.">attribute</error> a: A;
}